tests/specs/ecosystem/deno/gfm/0_6_0.test
deno/gfm/0.6.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:marked@^11.1": "npm:marked@11.2.0",
      "npm:sanitize-html@^2.11": "npm:sanitize-html@2.13.0"
    },
    "npm": {
      "deepmerge@4.3.1": {
        "integrity": "sha512-3sUqbMEc77XqpdNO7FRyRog+eW3ph+GYCbj+rK+uYyRMuwsVy0rMiVtPn+QJlKFvWP/1PYpapqYn0Me2knFn+A==",
        "dependencies": {}
      },
      "dom-serializer@2.0.0": {
        "integrity": "sha512-wIkAryiqt/nV5EQKqQpo3SToSOV9J0DnbJqwK7Wv/Trc92zIAYZ4FlMu+JPFW1DfGFt81ZTCGgDEabffXeLyJg==",
        "dependencies": {
          "domelementtype": "domelementtype@2.3.0",
          "domhandler": "domhandler@5.0.3",
          "entities": "entities@4.5.0"
        }
      },
      "domelementtype@2.3.0": {
        "integrity": "sha512-OLETBj6w0OsagBwdXnPdN0cnMfF9opN69co+7ZrbfPGrdpPVNBUj02spi6B1N7wChLQiPn4CSH/zJvXw56gmHw==",
        "dependencies": {}
      },
      "domhandler@5.0.3": {
        "integrity": "sha512-cgwlv/1iFQiFnU96XXgROh8xTeetsnJiDsTc7TYCLFd9+/WNkIqPTxiM/8pSd8VIrhXGTf1Ny1q1hquVqDJB5w==",
        "dependencies": {
          "domelementtype": "domelementtype@2.3.0"
        }
      },
      "domutils@3.1.0": {
        "integrity": "sha512-H78uMmQtI2AhgDJjWeQmHwJJ2bLPD3GMmO7Zja/ZZh84wkm+4ut+IUnUdRa8uCGX88DiVx1j6FRe1XfxEgjEZA==",
        "dependencies": {
          "dom-serializer": "dom-serializer@2.0.0",
          "domelementtype": "domelementtype@2.3.0",
          "domhandler": "domhandler@5.0.3"
        }
      },
      "entities@4.5.0": {
        "integrity": "sha512-V0hjH4dGPh9Ao5p0MoRY6BVqtwCjhz6vI5LT8AJ55H+4g9/4vbHx1I54fS0XuclLhDHArPQCiMjDxjaL8fPxhw==",
        "dependencies": {}
      },
      "escape-string-regexp@4.0.0": {
        "integrity": "sha512-TtpcNJ3XAzx3Gq8sWRzJaVajRs0uVxA2YAkdb1jm2YkPz4G6egUFAyA3n5vtEIZefPk5Wa4UXbKuS5fKkJWdgA==",
        "dependencies": {}
      },
      "htmlparser2@8.0.2": {
        "integrity": "sha512-GYdjWKDkbRLkZ5geuHs5NY1puJ+PXwP7+fHPRz06Eirsb9ugf6d8kkXav6ADhcODhFFPMIXyxkxSuMf3D6NCFA==",
        "dependencies": {
          "domelementtype": "domelementtype@2.3.0",
          "domhandler": "domhandler@5.0.3",
          "domutils": "domutils@3.1.0",
          "entities": "entities@4.5.0"
        }
      },
      "is-plain-object@5.0.0": {
        "integrity": "sha512-VRSzKkbMm5jMDoKLbltAkFQ5Qr7VDiTFGXxYFXXowVj387GeGNOCsOH6Msy00SGZ3Fp84b1Naa1psqgcCIEP5Q==",
        "dependencies": {}
      },
      "marked@11.2.0": {
        "integrity": "sha512-HR0m3bvu0jAPYiIvLUUQtdg1g6D247//lvcekpHO1WMvbwDlwSkZAX9Lw4F4YHE1T0HaaNve0tuAWuV1UJ6vtw==",
        "dependencies": {}
      },
      "nanoid@3.3.7": {
        "integrity": "sha512-eSRppjcPIatRIMC1U6UngP8XFcz8MQWGQdt1MTBQ7NaAmvXDfvNxbvWV3x2y6CdEUciCSsDHDQZbhYaB8QEo2g==",
        "dependencies": {}
      },
      "parse-srcset@1.0.2": {
        "integrity": "sha512-/2qh0lav6CmI15FzA3i/2Bzk2zCgQhGMkvhOhKNcBVQ1ldgpbfiNTVslmooUmWJcADi1f1kIeynbDRVzNlfR6Q==",
        "dependencies": {}
      },
      "picocolors@1.0.0": {
        "integrity": "sha512-1fygroTLlHu66zi26VoTDv8yRgm0Fccecssto+MhsZ0D/DGW2sm8E8AjW7NU5VVTRt5GxbeZ5qBuJr+HyLYkjQ==",
        "dependencies": {}
      },
      "postcss@8.4.38": {
        "integrity": "sha512-Wglpdk03BSfXkHoQa3b/oulrotAkwrlLDRSOb9D0bN86FdRyE9lppSp33aHNPgBa0JKCoB+drFLZkQoRRYae5A==",
        "dependencies": {
          "nanoid": "nanoid@3.3.7",
          "picocolors": "picocolors@1.0.0",
          "source-map-js": "source-map-js@1.2.0"
        }
      },
      "sanitize-html@2.13.0": {
        "integrity": "sha512-Xff91Z+4Mz5QiNSLdLWwjgBDm5b1RU6xBT0+12rapjiaR7SwfRdjw8f+6Rir2MXKLrDicRFHdb51hGOAxmsUIA==",
        "dependencies": {
          "deepmerge": "deepmerge@4.3.1",
          "escape-string-regexp": "escape-string-regexp@4.0.0",
          "htmlparser2": "htmlparser2@8.0.2",
          "is-plain-object": "is-plain-object@5.0.0",
          "parse-srcset": "parse-srcset@1.0.2",
          "postcss": "postcss@8.4.38"
        }
      },
      "source-map-js@1.2.0": {
        "integrity": "sha512-itJW8lvSA0TXEphiRoawsCksnlf8SyvmFzIhltqAHluXd88pkCd+cXJVHTDwdCr0IzwptSm035IHQktUu1QUMg==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class '_Renderer'.
  heading(text: string, level: 1 | 2 | 3 | 4 | 5 | 6, raw: string): string {
  ~~~~~~~
    at file://<tmpdir>/mod.ts:12:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class '_Renderer'.
  image(src: string, title: string | null, alt: string): string {
  ~~~~~
    at file://<tmpdir>/mod.ts:15:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class '_Renderer'.
  code(code: string, language?: string): string {
  ~~~~
    at file://<tmpdir>/mod.ts:18:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class '_Renderer'.
  link(href: string, title: string | null, text: string): string {
  ~~~~
    at file://<tmpdir>/mod.ts:21:3

Found 4 errors.

